purged (0.10) UNRELEASED; urgency=medium

  * Add copyright notices

 -- Emanuele Rocca <ema@wikimedia.org>  Thu, 30 Apr 2020 10:21:58 +0200

purged (0.9) buster-wikimedia; urgency=medium

  * Retry sending requests up to 'sendAttempts' times
  * Add metric 'purged_tcp_errors_total'

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 28 Apr 2020 11:28:38 +0200

purged (0.8) buster-wikimedia; urgency=medium

  * Add metric 'purged_udp_bytes_read_total'
  * multicast: test URL extraction
  * Add Host regex filtering

 -- Emanuele Rocca <ema@wikimedia.org>  Mon, 20 Apr 2020 11:43:06 +0200

purged (0.7) buster-wikimedia; urgency=medium

  * Add metric 'purged_htcp_packets_total' and frontend backlog to
    'purged_backlog'.
  * New flag -mcast_bufsize to set multicast reader kernel buffer via
    setsockopt()

 -- Emanuele Rocca <ema@wikimedia.org>  Thu, 16 Apr 2020 10:08:21 +0200

purged (0.6) buster-wikimedia; urgency=medium

  * Use golang.org/x/net/ipv4 for the multicast reader.

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 15 Apr 2020 17:01:52 +0200

purged (0.5) buster-wikimedia; urgency=medium

  * Purge full request URI, not just the path.

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 15 Apr 2020 11:25:45 +0200

purged (0.4) buster-wikimedia; urgency=medium

  * Parse URL only once in the backend goroutine

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 14 Apr 2020 14:44:33 +0200

purged (0.3) buster-wikimedia; urgency=medium

  * Distinguish between frontend and backend workers
  * Automatically reconnect in case of errors

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 14 Apr 2020 11:47:30 +0200

purged (0.2) buster-wikimedia; urgency=medium

  * New metrics: purged_bytes_{written,read}_total
  * Fatal on read/write errors

 -- Emanuele Rocca <ema@wikimedia.org>  Thu, 09 Apr 2020 10:56:07 +0200

purged (0.1) buster-wikimedia; urgency=medium

  * Initial release (Bug: T249583)

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 07 Apr 2020 17:12:03 +0200